--- a/RhinoDek2/app.config
+++ b/RhinoDek2/app.config
@@ -10,10 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="RhinoDek2.Properties.Settings.RhinoDekConnectionString"
-      connectionString="Data Source=ENGSRV\SIGMANEST;Initial Catalog=RhinoDek;Persist Security Info=True;User ID=SNUser;Password=bestnest1445"
+      connectionString=""
       providerName="System.Data.SqlClient" />
     <add name="RhinoDek2.Properties.Settings.SAPConnectionString"
-      connectionString="Data Source=SAP;Initial Catalog=SeaDek;Persist Security Info=True;User ID=sa;Password=B1AdminB1Admin"
+      connectionString=""
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <userSettings>
